@@ -40,6 +40,16 @@
     <h2>News</h2>
     <ul>
       <li>
+        <strong>Anonymous Voting Referendum</strong>
+        <small>(14/09/2004)</small>
+        <blockquote>
+          The GNOME Foundation will hold a <a
+          href="referenda/2004-10/">referendum</a> about anonymous voting in
+          a few weeks. Take a look at the <a
+          href="referenda/2004-10/rules.html">rules and the timeline</a>.
+        </blockquote>
+      </li>
+      <li>
         <strong>Results of 2003 elections official</strong>
         <small>(20/12/2003)</small>
         <blockquote>
