@@ -1,0 +1,9 @@
+SUBDIRS =
+
+urlpath = /referenda/2004-10
+ 
+page_SCRIPTS = \
+	index.html \
+	rules.html
+
+include $(top_srcdir)/rules.common
