@@ -1,0 +1,43 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html>
+
+  <head>
+    <title>GNOME Foundation Anonymous Voting Referendum</title>
+    <meta name="cvsdate" content="$Date$" />
+  </head>
+
+  <body>
+
+    <h1>GNOME Foundation Anonymous Voting Referendum</h1>
+
+    <p>
+      Any member of the GNOME Foundation can suggest a referendum. To be
+      accepted, a request for a referendum must be endorsed by 10% of the
+      Membership. The overall referendum process is overseen by the
+      Membership and Elections Committee, which can be reached at <a
+      href="mailto:elections&#64;gnome&#46;org">elections&#64;gnome&#46;org</a>.
+    </p>
+
+    <p>
+      In September 2003, the board discussed a possible move toward an anonymous
+      voting scheme for the annual GNOME Foundation board of directors elections
+      and brought it to the members on <a
+      href="http://mail.gnome.org/archives/foundation-list/">foundation-list&#64;gnome&#46;org</a>.
+      After much discussion, it was agreed that there was significant objection to
+      this so that the GNOME Foundation should hold a referendum to decide
+      whether future elections should use an anonymous voting mechanism.
+    </p>
+
+    <h2>Anonymous Voting Referendum Materials:</h2>
+    <ul>
+      <li>
+        <a href="rules.html">Referendum Rules and Timeline</a>
+      </li>
+      <li>
+        <a href="http://mail.gnome.org/archives/foundation-list/2003-September/msg00008.html">Original discussion about anonymous voting</a>
+      </li>
+    </ul>
+
+  </body>
+</html>
