@@ -1,0 +1,95 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html>
+
+  <head>
+    <title>GNOME Foundation Referendum Rules</title>
+    <meta name="cvsdate" content="$Date$" />
+  </head>
+
+  <body>
+
+    <h1>GNOME Foundation Referendum Rules &amp; Timeline</h1>
+
+    <h2>Referendum Rules</h2> 
+
+    <ol>
+      <li>
+        See the <a href="../../about/charter/">GNOME Foundation charter</a> for
+        general rules.
+      </li>
+      <li>
+        Members of the GNOME Foundation as of September 24, 2004 are eligible to
+        vote in the referendum. Anyone who has made a contribution to GNOME can
+        apply for membership by completing the <a
+        href="../../membership/application.php">application</a>.
+      </li>
+      <li>
+        All discussion related to the election should be held on
+        <a href="http://mail.gnome.org/archives/foundation-list/">foundation-list&#64;gnome&#46;org</a>.
+      </li>
+      <li>
+        Ballots will be sent via e-mail to all eligible voters on September 27,
+        2004, and must be returned by October 8, 2004, 23:59 UTC (18:59 EST).
+        Full instructions will be included in the ballot.
+      </li>
+      <li>
+        Ballots will be held confidential during the election, but an archive
+        of all submitted ballots will be made publicly accessible at its
+        conclusion.
+      </li>
+      <li>
+        The Elections Committee is responsible for counting the ballots, after
+        taking appropriate action to fix misformatted ballots. 
+      </li>
+      <li>
+        In the event of a tie, the Elections Committee will schedule a run-off
+        election as soon as possible. 
+      </li>
+      <li>
+        The Elections Committee will announce preliminary results as soon as
+        possible after the election closes, along with instructions on how to
+        access the ballot archive and how to independently verify the vote
+        count.
+      </li>
+      <li>
+        Any eligible voter may challenge the preliminary results by e-mailing
+        <a
+        href="mailto:elections&#64;gnome&#46;org">elections&#64;gnome&#46;org</a>
+        prior to October 22, 2004. The decision of the Elections Committee as
+        to any challenge shall be final. Once any challenges have been
+        resolved, the Elections Committee shall announce the final results.
+      </li>
+      <li>
+        Any questions regarding these procedures should be directed to the
+        Elections Committee by e-mail to <a
+        href="mailto:elections&#64;gnome&#46;org">elections&#64;gnome&#46;org</a>.
+        The committee shall have the power to make any necessary changes or
+        clarifications to these rules at any point during the referendum.
+      </li>
+    </ol>
+
+    <h2>Timeline</h2>
+    <p><small>(all deadlines are 23:59 UTC/18:59 EST)</small></p> 
+    <ul>
+      <li>
+        September 24 (Friday): Last day to apply for membership (to be eligible
+        for this referendum).
+      </li>
+      <li>
+        September 27 (Monday): Ballots mailed to eligible voters, voting begins.
+      </li>
+      <li>
+        October 8 (Friday): Voting closes.
+      </li>
+      <li>
+        October 11 (Monday): Preliminary results mailed to
+        <a href="http://mail.gnome.org/archives/foundation-list/">foundation-list&#64;gnome&#46;org</a>.
+      </li>
+      <li>
+        October 22 (Friday): Last day to challenge preliminary results.
+      </li>
+    </ul>
+
+  </body>
+</html>
