@@ -1,0 +1,8 @@
+SUBDIRS = 2004-10
+
+urlpath = /referenda
+
+page_SCRIPTS = \
+	index.html
+
+include $(top_srcdir)/rules.common
