@@ -1,0 +1,29 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html>
+ 
+  <head>
+    <title>GNOME Foundation Referenda</title>
+    <meta name="cvsdate" content="$Date$" />
+  </head>
+
+  <body>
+
+    <h1>GNOME Foundation Referenda</h1>
+
+    <p>
+      Any member of the GNOME Foundation can suggest a referendum. To be
+      accepted, a request for a referendum must be endorsed by 10% of the
+      Membership. The overall referendum process is overseen by the
+      Membership and Elections Committee, which can be reached at <a
+      href="mailto:elections&#64;gnome&#46;org">elections&#64;gnome&#46;org</a>.
+    </p>
+
+    <h2>Referenda Materials</h2>
+
+    <ul>
+      <li><a href="2004-10/">Material from the Anonymous Voting Referendum</a></li>
+    </ul>
+
+  </body>
+</html>
